PLATUI-611: Fix issue with internal header scrollbars

--- a/src/components/internal-header/_internal-header.scss
+++ b/src/components/internal-header/_internal-header.scss
@@ -1,6 +1,7 @@
 .hmrc-internal-header {
   @include govuk-font($size: 19);
 
+  box-sizing: border-box;
   padding: govuk-spacing(4) govuk-spacing(3);
   border-bottom: 10px solid govuk-organisation-colour("hm-revenue-customs");
 
